# japanese-lm-fin-harness

./: .env.tmp  .gitignore  LICENSE  Makefile  README.md  UPDATE.md  api_models.py  check_prompt.py  main.py  open_ai.py  pyproject.toml  pyproject.toml.old
.github/workflows/: api-runner-test.yaml  install.yaml  lint.yaml  runner-test.yaml  vllm-test.yaml
analysis/: analysis.md  generate.py
developments/: README.md  check_final_results.py  generate_harness_sh.py  generate_run_command.py  make_harness_sh.py  make_harness_sh_run_command.py  make_leaderboard.py  make_run_commands.py  results_aggregator.py
developments/models/: .template.json.temp  abeja.json  calm.json  elyza.json  fugaku.json  google.json  karakuri.json  lightblue.json  line.json  llama.json  llama2.json  llm-jp.json  mistral.json  moneyforward.json  mpt.json  pfnet.json  plamo.json  qwen.json  rakuten.json  rinna.json  sakanaai.json  sbintuitions.json  stabilityai.json  stockmark.json  swallow.json  template.json.temp  vicuna.json  weblab.json  xwin.json
developments/run_settings/: settings.json.temp
docs/: Prompt Templates.md
jlm_fin_eval/: __init__.py  evaluator.py
jlm_fin_eval/api/: metrics.py
jlm_fin_eval/datasets/chabsa/: README.md  chabsa.py
jlm_fin_eval/datasets/cma_basics/: README.md  cma_basics.py
jlm_fin_eval/datasets/cpa/: CPA_AUDIT.xlsx  README.md  cpa.py  cpa_audit.py
jlm_fin_eval/datasets/fp2/: README.md  data.json  fp2.py
jlm_fin_eval/datasets/security_sales_1/: README.md  data.json  security_sales_1.py
jlm_fin_eval/tasks/: __init__.py  chabsa.py  cma_basics.py  cpa.py  cpa_audit.py  fp2.py  security_sales_1.py
jlm_fin_eval/tasks/chabsa/: chabsa-1.0-0.1.yaml  chabsa-1.0-0.2.yaml  chabsa-1.0-0.3.yaml  chabsa-1.0-0.4.yaml  chabsa-1.0-0.5.yaml  chabsa-1.0-0.6.yaml  chabsa.yaml  task.py
jlm_fin_eval/tasks/cma_basics/: cma_basics-1.0-0.1.2.yaml  cma_basics-1.0-0.1.yaml  cma_basics-1.0-0.2.1.yaml  cma_basics-1.0-0.2.yaml  cma_basics-1.0-0.3.yaml  cma_basics-1.0-0.4.yaml  cma_basics-1.0-0.5.yaml  cma_basics-1.0-0.6.yaml  cma_basics.yaml  utils.py
jlm_fin_eval/tasks/cpa_audit/: cpa_audit-1.0-0.1.2.yaml  cpa_audit-1.0-0.1.yaml  cpa_audit-1.0-0.2.1.yaml  cpa_audit-1.0-0.2.yaml  cpa_audit-1.0-0.3.yaml  cpa_audit-1.0-0.4.yaml  cpa_audit-1.0-0.5.yaml  cpa_audit-1.0-0.6.yaml  cpa_audit.yaml  utils.py
jlm_fin_eval/tasks/fp2/: fp2-1.0-0.1.2.yaml  fp2-1.0-0.1.yaml  fp2-1.0-0.2.1.yaml  fp2-1.0-0.2.yaml  fp2-1.0-0.3.yaml  fp2-1.0-0.4.yaml  fp2-1.0-0.5.yaml  fp2-1.0-0.6.yaml  fp2.yaml  utils.py
jlm_fin_eval/tasks/security_sales_1/: security_sales_1-1.0-0.1.2.yaml  security_sales_1-1.0-0.1.yaml  security_sales_1-1.0-0.2.1.yaml  security_sales_1-1.0-0.2.yaml  security_sales_1-1.0-0.3.yaml  security_sales_1-1.0-0.4.yaml  security_sales_1-1.0-0.5.yaml  security_sales_1-1.0-0.6.yaml  security_sales_1.yaml
jlm_fin_harness/datasets/cma_basics/: README.md  data.json
jlm_fin_harness/datasets/sacurity_sales_1/: data1.json
models/Fugaku-LLM/Fugaku-LLM-13B/: harness-1.0-0.1.2.sh  harness-1.0-0.1.sh  harness-1.0-0.2.1.sh  harness-1.0-0.2.sh  harness-1.0-0.3.sh  harness-1.0-0.4.sh  harness-1.0-0.5.sh  harness-1.0-0.6.sh  harness-default.sh  result-1.0-0.1.2.json  result-1.0-0.1.json  result-1.0-0.2.1.json  result-1.0-0.2.json  result-1.0-0.3.json  result-1.0-0.4.json  result-1.0-0.5.json  result-1.0-0.6.json  result-default.json
models/Fugaku-LLM/Fugaku-LLM-13B-instruct/: harness-1.0-0.1.2.sh  harness-1.0-0.1.sh  harness-1.0-0.2.1.sh  harness-1.0-0.2.sh  harness-1.0-0.3.sh  harness-1.0-0.4.sh  harness-1.0-0.5.sh  harness-1.0-0.6.sh  harness-default.sh  result-1.0-0.1.2.json  result-1.0-0.1.json  result-1.0-0.2.1.json  result-1.0-0.2.json  result-1.0-0.3.json  result-1.0-0.4.json  result-1.0-0.5.json  result-1.0-0.6.json  result-default.json
models/Qwen/Qwen-14B-Chat/: harness--1.0-0.1.2.sh  harness--1.0-0.1.sh  harness--1.0-0.2.1.sh  harness--1.0-0.2.sh  harness--1.0-0.3.sh  harness--1.0-0.4.sh  harness--1.0-0.5.sh  harness--1.0-0.6.sh  harness-.sh  harness-1.0-0.1.2.sh  harness-1.0-0.1.sh  harness-1.0-0.2.sh  (+17 more)
models/abeja-gpt-neox-japanese-2.7b/: harness.sh
models/stabilityai/: harness.sh
(+4502 files in other folders)
