[project]
name = "japanese-lm-fin-harness-020"
version = "0.2.3"
description = ""
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.26.0",
    "anthropic>=0.25.7",
    "bitsandbytes>=0.41.1",
    "datasets>=2.15.0,<4.0.0",
    "einops>=0.7.0",
    "emoji>=2.8.0",
    "fugashi==1.4.0",
    "google-cloud-aiplatform>=1.49.0",
    "lm-eval==0.4.5",
    "neologdn>=0.5.2",
    "numpy>=1.26.4",
    "openai>=1.24.0",
    "openpyxl>=3.1.2",
    "peft>=0.10.0",
    "protobuf<3.21",
    "sentencepiece>=0.1.99",
    "tenacity>=9.1.2",
    "tiktoken>=0.7.0",
    "transformers>=4.40.1",
    "transformers-stream-generator>=0.0.4",
    "unidic-lite==1.0.8",
    "vertexai>=1.49.0",
    "vllm>=0.6.3.post1",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "black==23.9.1",
    "flake8==6.1.0",
    "isort==5.12.0",
    "matplotlib>=3.8.2",
    "mypy==1.5.1",
    "pyproject-flake8==6.1.0",
    "scipy>=1.11.4",
]

[tool.isort]
profile = 'black'
force_single_line = true
skip = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "examples",
    ".venv",
    "tests/examples"
]
[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
[tool.flake8]
ignore = "E203,E231,E501,W503"
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "examples",
    ".venv",
    "__init__.py"
    ]
select = "B,B950,C,E,F,W"

[tool.uv.sources]
lm-eval = { git = "https://github.com/EleutherAI/lm-evaluation-harness.git" }
